[tool.poetry]
name = "armarx-dev"
version = "0.15.5"
description = "Python bindings for ArmarX"
authors = ["Markus Grotz <markus.grotz@kit.edu>"]
packages = [{include = "armarx"}, {include = "visionx"}, {include = "armarx_memory"}]
readme = "README.md"
repository = "http://gitlab.com/ArmarX/python3-armarx"
documentation = "https://armarx.humanoids.kit.edu/python/"

[tool.poetry.dependencies]
python = "^3.6"
zeroc-ice = "3.7.0"
lxml = "^4.6.3"
argparse = "^1.4.0"
numpy = "~1.19"
transforms3d = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
setuptools = "^58.1.0"
Sphinx = {version = "^4.0.2"}
sphinx-rtd-theme = {version = "^0.5.2"}
toml = {version = "^0.10.2"}

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["setuptools", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
