[tool.poetry]
name = "armarx-dev"
version = "0.18.1"
description = "Python bindings for ArmarX"
authors = ["Markus Grotz <markus.grotz@kit.edu>"]
packages = [{include = "armarx"}, {include = "visionx"}, {include = "armarx_memory"}]
readme = "README.md"
repository = "http://gitlab.com/ArmarX/python3-armarx"
documentation = "https://armarx.humanoids.kit.edu/python/"

[tool.poetry.dependencies]
python = "^3.6"
zeroc-ice = "3.7.0"
lxml = ">=4.8.0"
numpy = ">=1.19.5"
transforms3d = ">=0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^0.5.2"
toml = "^0.10.2"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
#requires = ["setuptools", "wheel", "poetry-core>=1.0.0"]
requires = ["poetry-core@https://github.com/python-poetry/poetry-core/archive/325312c016d69189ac93c945ba0c1b69296c5e54.zip"]
build-backend = "poetry.core.masonry.api"
